--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
 body{
     width: 100%;
     margin: 0 auto;
+    font-family: 'Poppins', sans-serif;
+    background-color: #EDEFEE;
+    color: #333;
+    font-size: 16px;
+    line-height: 1.5;
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    
   }
   
   li{
@@ -83,10 +92,10 @@ body{
   }
   
   
-  h2 {
+  /* h2 {
     color: #F4CE14;
     font-size: 40px;
-  }
+  } */
   
   h3 {
     font-size: 25px;
@@ -105,7 +114,7 @@ body{
     padding: 14px 18px;
     border: none;
     text-decoration: none;
-    border-radius: 12px;
+    border-radius: 8px;
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
@@ -208,13 +217,54 @@ body{
   .menu-content .heading{
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   
+  .menu-content h3{
+    font-size: 20px;
+    color: #333;
+  }
+
+  .menu-content p{
+    font-size: 16px;
+    color: #333;
+    margin: 10px 0;
+  }
+
+  #price{
+    font-size: 18px;
+    font-weight: 600;
+    color: #da1616;
+  }
+
   .orderbtn{
     padding: 5px 12px;
-    margin-bottom: 20px;
+    margin: 20px 0;
     font-size: 16px;
     font-weight: 600;
+  }
+
+  /* Booking form */
+  .booking-form-container{
+    display: flex;   
+    flex-direction: column;
+    text-align: center;
+        background: #f4ce14;
+  }
+
+  .booking-form{
+        display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .reserve-table-btn{
+    padding: 8px 15px;
+    border-radius: 5px;
+    border: none;
+    background-color: #495e57;
+    color: white;
+    font-weight: 500;
   }
   
   footer section{
@@ -222,6 +272,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: start;
+    background-color: #495e5775;
   }
   
   .company-info img{
