--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ body{
     width: 100%;
     background-color: #495E57;
     display: flex;
-    flex-direction: column;
+
     align-items: center;
     transition: all 0.3s ease-in-out;
   }
@@ -134,7 +134,7 @@ body{
   }
   
   
-  form, .comfirm{
+  form, .confirm{
     padding: 10px 13%;
   }
   
@@ -165,7 +165,7 @@ body{
   
   }
   
-  .comfirm span{
+  .confirm span{
     color: blue;
   }
   
@@ -249,7 +249,7 @@ body{
     display: flex;   
     flex-direction: column;
     text-align: center;
-        background: #f4ce14;
+    background: #a9c8be;
   }
 
   .booking-form{
