--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 
-body{
+body {
     width: 100%;
     margin: 0 auto;
     font-family: 'Poppins', sans-serif;
@@ -10,61 +10,62 @@ body{
     overflow-x: hidden;
     overflow-y: auto;
     scroll-behavior: smooth;
-    
-  }
-  
-  li{
+
+}
+
+li {
     list-style: none;
-  }
-  a{
+}
+
+a {
     text-decoration: none;
-  }
-  
-  nav{
+}
+
+nav {
     z-index: 10001;
-  }
-  
-  
-  .navbar {
+}
+
+
+.navbar {
     padding: 10px 13%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  nav ul li {
+}
+
+nav ul li {
     display: inline-block;
     padding: 1em;
-  }
-  
-  nav ul li a{
+}
+
+nav ul li a {
     color: #000;
-  }
-  
-  nav ul li a:hover{
+}
+
+nav ul li a:hover {
     text-decoration: underline solid #495E57;
-    
-  }
-  
-  .menu-icon {
+
+}
+
+.menu-icon {
     display: none;
     cursor: pointer;
-  }
-  
-  .bar {
+}
+
+.bar {
     width: 25px;
     height: 3px;
     background-color: black;
     margin: 5px 0;
-  }
-  
-  .nav-links {
+}
+
+.nav-links {
     list-style: none;
     display: flex;
     align-items: center;
-  }
-  
-  .nav-links.visible {
+}
+
+.nav-links.visible {
     flex-direction: column;
     position: absolute;
     top: 40px;
@@ -75,40 +76,40 @@ body{
 
     align-items: center;
     transition: all 0.3s ease-in-out;
-  }
-  
-  
-  /* header section */
-  
-  .header {
+}
+
+
+/* header section */
+
+.header {
     background-color: #495e57;
     padding: 50px 0;
-  }
-  
-  .header section {
-  color: #EDEFEE;
-  padding: 10px 13%;
-  position: relative;
-  }
-  
-  
-  /* h2 {
-    color: #F4CE14;
-    font-size: 40px;
-  } */
-  
-  h3 {
+}
+
+.header section {
+    color: #EDEFEE;
+    padding: 10px 13%;
+    position: relative;
+}
+
+
+/* h2 {
+  color: #F4CE14;
+  font-size: 40px;
+} */
+
+h3 {
     font-size: 25px;
-  }
-  
-  .banner p {
+}
+
+.banner p {
     font-size: 20px;
     max-width: 520px;
     line-height: 1.5;
     margin-bottom: 30px;
-  }
-  
-  button {
+}
+
+button {
     background-color: #F4CE14;
     color: black;
     padding: 14px 18px;
@@ -118,247 +119,253 @@ body{
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
-  }
-  
-  .banner-img{
+}
+
+.banner-img {
     position: absolute;
     right: 13%;
     top: -9%;
     width: 400px;
-  }
-  
-  .banner-img img {
+}
+
+.banner-img img {
     width: 100%;
     height: 400px;
     border-radius: 20px;
-  }
-  
-  
-  form, .confirm{
+}
+
+
+form, .confirm {
     padding: 10px 13%;
-  }
-  
-  .formField{
+}
+
+.formField {
     padding: 50px 20px;
-  }
-  
-  input, label{
+}
+
+input, label {
     display: inline-block;
     margin-right: 20px;
     margin-bottom: 20px;
-  }
-  #book-date, #book-time, #book-guests, #book-occasion{
-    background: #bdbdbd43;
-    padding: 8px 24px;
-    border: none;
-    outline: none;
-    border-radius: 2px;
-  }
-  
-  .btnReceive input{
+}
+
+/*#book-date, #book-time, #book-guests, #book-occasion {*/
+/*    background: #bdbdbd43;*/
+/*    padding: 8px 24px;*/
+/*    border: none;*/
+/*    outline: none;*/
+/*    border-radius: 2px;*/
+/*}*/
+
+.btnReceive input {
     padding: 12px 16px;
     margin-top: 20px;
     background: #495e57;
     color: #fff;
     border: none;
     border-radius: 4px;
-  
-  }
-  
-  .confirm span{
+
+}
+
+.confirm span {
     color: blue;
-  }
-  
-  
-  /* menu items */
-  
-  .menu-container{
+}
+
+
+/* menu items */
+
+.menu-container {
     margin: 110px auto;
     padding: 10px 13%;
-  }
-  
-  .menu-container h2{
+}
+
+.menu-container h2 {
     color: #000;
-  }
-  
-  .menu-header{
+}
+
+.menu-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-  }
-  .cards{
+}
+
+.cards {
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem 1rem;
-  }
-  
-  .menu-items{
+}
+
+.menu-items {
     /* height: 400px; */
     width: 350px;
     background: #a9c8be;
     border-radius: 8px;
-  }
-  
-  .menu-container img{
+}
+
+.menu-container img {
     width: 100%;
     height: 233px;
     border-radius: 8px;
-  }
-  
-  .menu-content{
+}
+
+.menu-content {
     padding: 5px 15px;
-  }
-  
-  
-  .menu-content .heading{
+}
+
+
+.menu-content .heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-  
-  .menu-content h3{
+}
+
+.menu-content h3 {
     font-size: 20px;
     color: #333;
-  }
+}
 
-  .menu-content p{
+.menu-content p {
     font-size: 16px;
     color: #333;
     margin: 10px 0;
-  }
+}
 
-  #price{
+#price {
     font-size: 18px;
     font-weight: 600;
     color: #da1616;
-  }
+}
 
-  .orderbtn{
+.orderbtn {
     padding: 5px 12px;
     margin: 20px 0;
     font-size: 16px;
     font-weight: 600;
-  }
+}
 
-  /* Booking form */
-  .booking-form-container{
-    display: flex;   
+/* Booking form */
+.booking-form-container {
+    display: flex;
     flex-direction: column;
     text-align: center;
     background: #a9c8be;
-  }
+}
 
-  .booking-form{
-        display: flex;
+.booking-form {
+    display: flex;
     justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .reserve-table-btn{
+ 
+}
+
+.reserve-table-btn button {
     padding: 8px 15px;
     border-radius: 5px;
     border: none;
     background-color: #495e57;
     color: white;
     font-weight: 500;
-  }
-  
-  footer section{
+    font-size: 16px;
+}
+
+footer section {
     padding: 10px 13%;
     display: flex;
     justify-content: space-between;
     align-items: start;
     background-color: #495e5775;
-  }
-  
-  .company-info img{
+}
+
+.company-info img {
     margin-top: 12px;
     cursor: pointer;
     width: 200px;
-  }
-  
-  .company-info p{
+}
+
+.company-info p {
     width: 320px;
-  }
-  
-  footer h3{
+}
+
+footer h3 {
     font-size: 18px;
-  }
-  
-  footer ul{
+}
+
+footer ul {
     padding: 0;
-  }
-  
-  footer ul li{
+}
+
+footer ul li {
     padding: 8px 0;
-  }
-  
-  
-  @media screen and (max-width: 768px){
+}
+
+
+@media screen and (max-width: 768px) {
     .menu-icon {
-      display: block;
+        display: block;
     }
-  
+
     .nav-links {
-      display: none;
+        display: none;
     }
-  
+
     .nav-links.visible {
-      display: flex;
-      background: #333333;
-      z-index: 1000;
-      padding: 20px 0;
+        display: flex;
+        background: #333333;
+        z-index: 1000;
+        padding: 20px 0;
     }
-  
-    .navbar{
-      background:#fff;
-      padding: 10px 8%;
+
+    .navbar {
+        background: #fff;
+        padding: 10px 8%;
     }
-  
-    nav ul li a{
-      color: #fff;
+
+    nav ul li a {
+        color: #fff;
     }
-  
-    .bar{
-      background: #333333;
+
+    .bar {
+        background: #333333;
     }
-  
-    .banner-img{
-      display: none;
+
+    .banner-img {
+        display: none;
     }
-  
-    form, .comfirm{
-      padding: 10px 8%;
+
+    form, .comfirm {
+        padding: 10px 8%;
     }
-  
-  
-    .header section, .menu-container{
-      padding: 10px 8%;
+
+
+    .header section, .menu-container {
+        padding: 10px 8%;
     }
-    .menu-container{
-      margin: 20px 0;
+
+    .menu-container {
+        margin: 20px 0;
     }
-    .menu-header{
-      justify-content: flex-start;
+
+    .menu-header {
+        justify-content: flex-start;
     }
-  
-    .menu-items{
-      width: 100%;
+
+    .menu-items {
+        width: 100%;
     }
-  
-    footer section{
-      padding: 10px 8%;
-      flex-direction: column;
+
+    footer section {
+        padding: 10px 8%;
+        flex-direction: column;
     }
-    .company-info p{
-      width: 100%;
+
+    .company-info p {
+        width: 100%;
     }
-  }
-  
-  .hidden{
+}
+
+.hidden {
     display: none;
-  }
+}
